--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <div [style.minWidth.px] = "clientWidth" class="header">
   <div style="display: flex;">
     <div class="emptyDivForPositionLogo"></div>
-    <div routerLink = "/home" routerLinkActive="active-link" class="logo button">
+    <div routerLink = "" routerLinkActive="active-link" class="logo button line">
       <span>AV-Finance</span>
     </div>
-  <div routerLink = "/calculator" class="logo button">
-    <span>Calculator</span>
+  <div routerLink = "/calculator" class="logo button line rightbutton">
+    <span>Калькулятор</span>
   </div>
   </div>
   <span class="numberForConnection">
