--- a/src/app/home/pages/credit-lising-calculator/credit-lising-calculator.component.html
+++ b/src/app/home/pages/credit-lising-calculator/credit-lising-calculator.component.html
@@ -91,8 +91,7 @@
     </mat-card>
   </div>
 
-  <button mat-raised-button class="aboutConditions"  color="primary" >Подробнее об условиях</button>
-  <!-- (click)="scrollToThirdPage()" -->
+  <button mat-raised-button class="aboutConditions" routerLink="" color="primary" >Подробнее об условиях</button>
 </div>
 </div>
 </div>
