--- a/src/app/home/pages/credit-lising-difference/credit-lising-difference.component.html
+++ b/src/app/home/pages/credit-lising-difference/credit-lising-difference.component.html
@@ -1,14 +1,11 @@
-<div>
-  <!-- [style]="cornerYellowLine" -->
+<div [style]="secondScreenStyle">
   <div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
     <div class="container">
-      <div class="title">
-        <span>КРЕДИТ или ЛИЗИНГ?</span>
-      </div>
+      <div class="title"><h3 class="mainTitle">КРЕДИТ/ЛИЗИНГ</h3></div>
+      <div class="title"><p style="margin-bottom: 30px;">на покупку автомобиля с пробегом</p></div>
+      <div class="title"><h3>ОСНОВНЫЕ УСЛОВИЯ:</h3></div>
       <div class="content parentFlexColumn">
-        <span>на покупку автомобиля с пробегом</span>
-        <span style="font-weight: bold; margin: 10px;">ОСНОВНЫЕ УСЛОВИЯ</span>
-        <div style="margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center; width: 95%;">
+        <div class="creditLisingBlocks">
           <div class="creditDescriptionBlock parentFlexColumn border">
             <h3>КРЕДИТ</h3>
             <p>Процентная ставка: <strong>от 11% годовых</strong></p>
@@ -28,7 +25,7 @@
             <p>Досрочное погашение: <strong>без ограничений</strong></p>
           </div>
         </div>
-        <div style="box-sizing:border-box; padding: 10px; margin-bottom: 20px; width: 95%;" class="border parentFlexColumn">
+        <div class="advantagesBlocks border parentFlexColumn">
           <div class="firstLineBlockAdvantages ">
             <div class="firstBlockAdvantages flexContentBetween">
               <div class="imageAuto imageSize"></div>
