--- a/src/app/home/pages/request/request.component.css
+++ b/src/app/home/pages/request/request.component.css
@@ -1,3 +1,7 @@
+.test {
+  background: #ffcc00;
+}
+
 .thirdScreen {
   width: 100%;
   height: 100%;
@@ -33,17 +37,29 @@
   position: absolute;
   bottom: 0;
 }
+#formaToPost {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  height: 90%;
+}
 
 @media screen and (max-width: 824px) {
   .request {
     width: 80%;
+    min-width: auto;
+  }
+  #formaToPost {
+    width: auto;
   }
   .requestTitle {
     font-size: 5.9vmin;
   }
   .requestDescription {
     font-size: 3vmin;
-    margin: 2px;
+    margin-top: 15px;
+    width: 90%;
   }
   .requestDescription {
     width: 90%;
@@ -65,6 +81,5 @@
   .requestDescription {
     text-align: justify;
     font-size: 13pt;
-    width: 105%;
   }
 }
