--- a/src/app/home/pages/request/request.component.html
+++ b/src/app/home/pages/request/request.component.html
@@ -5,15 +5,15 @@
   <mat-card class="request" >
     <p class="requestTitle"><strong>Заявка на финансирование</strong></p>
     <p class="requestDescription">Наш специалист свяжется с вами и подробно проконсультирует вас обо всех условиях покупки автомобиля</p>
-    <form #formData='ngForm' (ngSubmit)="submitForm(formData)" id="formaToPost" style="display: flex; flex-direction: column; align-items: center; width: 90%; height: 90%;">
+    <form #formData='ngForm' (ngSubmit)="submitForm(formData)" id="formaToPost">
       <input type="hidden" name="project_name" (ngModel)="project_name" value="Обратный Звонок">
       <input type="hidden" name="admin_email" (ngModel)="admin_email" value="info@av-finance.by">
       <input type="hidden" name="form_subject" (ngModel)="form_subject" value="New order">
       <mat-form-field class="requestInputs">
-        <input matInput placeholder="Имя" value="" name="name" (ngModel)="name" required>
+        <input matInput placeholder="Имя" value="" name="name" [(ngModel)]="name" required>
       </mat-form-field>
       <mat-form-field class="requestInputs">
-        <input matInput placeholder="Телефон" value="" name="phone" (ngModel)="phone" required>
+        <input matInput placeholder="Телефон" value="" name="phone" [(ngModel)]="phone" required>
       </mat-form-field>
       <button style="width: 200px; height: 40px; font-size: 1.1em;" mat-raised-button [disabled]="!formData.valid" type="submit" color="warn">Отправить заявку</button>
     </form>
