Added calls to phone

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -20,6 +20,8 @@
   display: flex;
 }
 .divFooterIcons div .value {
+  text-decoration: none;
+  color: inherit;
   /* font-size: 2rem; */
 }
 .divFooterIconPhone {
