--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
       <i class="footerIconPhone footerIcon"></i>
       <div style="display: flex; flex-direction: column; align-items: left; justify-content: space-around">
         <span>ТЕЛЕФОНЫ</span>
-        <span class="value">+375(33)689-29-89</span>
+        <a href="tel:+375336892989" class="value">+375(33)689-29-89</a>
       </div>
     </div>
     <div class="divFooterIcons">
