--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,6 @@
   </div>
   <span class="numberForConnection">
     <div class="yellowTreangle"></div>
-    +375(33)689-29-89
+    <a href="tel:+375336892989">+375(33)689-29-89</a>
   </span>
 </div>
