--- a/src/app/home/pages/installment-plan/installment-plan.component.html
+++ b/src/app/home/pages/installment-plan/installment-plan.component.html
@@ -1,52 +1,54 @@
-<div [style] = "thirdScreenStyle">
-  <div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
-    <div class="container parentFlexColumn borderBlack">
-      <div class="title"><h3 style="margin-bottom:7px; margin-top:4px; font-size: 3rem; font-weight: 600;">РАССРОЧКА</h3></div>
-      <div class="title"><p style="margin-bottom: 30px;">на покупку автомобиля с пробегом</p></div>
-      <div class="title"><h3>ОСНОВНЫЕ УСЛОВИЯ:</h3></div>
-      <div class="content parentFlexColumn">
-        <div class="conditions">
-          <table>
-            <tr>
-              <td><p>Аванс</p></td>
-              <td><p>от 30%</p></td>
-              <td><p>от 50%</p></td>
-              <td><p>от 70%</p></td>
-            </tr>
-            <tr>
-              <td><p>Срок</p></td>
-              <td><p>12 месяцев</p></td>
-              <td><p>18 месяцев</p></td>
-              <td><p>24 месяцев</p></td>
-            </tr>
-            <tr>
-              <td><p>Процентная ставка</p></td>
-              <td><p>0,01%</p></td>
-              <td><p>0,01%</p></td>
-              <td><p>0,01%</p></td>
-            </tr>
-            <tr>
-              <td><p>Валюта</p></td>
-              <td><p>белорусские рубли</p></td>
-              <td><p>белорусские рубли</p></td>
-              <td><p>белорусские рубли</p></td>
-            </tr>
-          </table>
-        </div>
-        <div class="title"><h3 style="margin-top:2em;">РАСПРОСТРАНЯЕТСЯ:</h3></div>
-        <div class="whoCanUse">
-          <div class="whoCanUseChildrenSize">
-            <div class="whoCanUseContent border">
-              <p>На любые автомобили не старше 9 лет</p>
-            </div>
+<div (deferLoad)="showMyElement=true">
+<div [style] = "thirdScreenStyle" *ngIf="showMyElement">
+<div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
+  <div class="container parentFlexColumn borderBlack">
+    <div class="title"><h3 style="margin-bottom:7px; margin-top:4px; font-size: 3rem; font-weight: 600;">РАССРОЧКА</h3></div>
+    <div class="title"><p style="margin-bottom: 30px;">на покупку автомобиля с пробегом</p></div>
+    <div class="title"><h3>ОСНОВНЫЕ УСЛОВИЯ:</h3></div>
+    <div class="content parentFlexColumn">
+      <div class="conditions">
+        <table>
+          <tr>
+            <td><p>Аванс</p></td>
+            <td><p>от 30%</p></td>
+            <td><p>от 50%</p></td>
+            <td><p>от 70%</p></td>
+          </tr>
+          <tr>
+            <td><p>Срок</p></td>
+            <td><p>12 месяцев</p></td>
+            <td><p>18 месяцев</p></td>
+            <td><p>24 месяцев</p></td>
+          </tr>
+          <tr>
+            <td><p>Процентная ставка</p></td>
+            <td><p>0,01%</p></td>
+            <td><p>0,01%</p></td>
+            <td><p>0,01%</p></td>
+          </tr>
+          <tr>
+            <td><p>Валюта</p></td>
+            <td><p>белорусские рубли</p></td>
+            <td><p>белорусские рубли</p></td>
+            <td><p>белорусские рубли</p></td>
+          </tr>
+        </table>
+      </div>
+      <div class="title"><h3 style="margin-top:2em;">РАСПРОСТРАНЯЕТСЯ:</h3></div>
+      <div class="whoCanUse">
+        <div class="whoCanUseChildrenSize">
+          <div class="whoCanUseContent border">
+            <p>На любые автомобили не старше 9 лет</p>
           </div>
-          <div class="whoCanUseChildrenSize marginMinus">
-            <div class="whoCanUseContent">
-              <p>Автомобили стоимостью от 15000 BYN</p>
-            </div>
+        </div>
+        <div class="whoCanUseChildrenSize marginMinus">
+          <div class="whoCanUseContent">
+            <p>Автомобили стоимостью от 15000 BYN</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+</div>
 </div>
