--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,10 +6,10 @@
 </div>
 
 <div #ancorC_Ldifference (deferLoad)="showCreLisDiff = true">
-  <ng-contaniner *ngIf="showCreLisDiff">
+  <ng-container *ngIf="showCreLisDiff">
     <app-credit-lising-difference>
     </app-credit-lising-difference>
-  </ng-contaniner>
+  </ng-container>
 </div>
 
 <div (deferLoad)="showIntPlab = true">
