--- a/src/app/home/pages/installment-plan/installment-plan.component.html
+++ b/src/app/home/pages/installment-plan/installment-plan.component.html
@@ -1,5 +1,4 @@
-<div (deferLoad)="showMyElement=true">
-<div [style] = "thirdScreenStyle" *ngIf="showMyElement">
+<div [style] = "thirdScreenStyle">
 <div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
   <div class="container parentFlexColumn borderBlack">
     <div class="title"><h3 style="margin-bottom:7px; margin-top:4px; font-size: 3rem; font-weight: 600;">РАССРОЧКА</h3></div>
@@ -49,6 +48,5 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 </div>
