--- a/src/app/installment-calculator/installment-calculator.component.html
+++ b/src/app/installment-calculator/installment-calculator.component.html
@@ -63,9 +63,9 @@
         <!-- <h3>Лучший выбор:</h3>
         <img [src]="link" class="image"> -->
         <h3>Процентная ставка:</h3>
-        <h2 class="values">{{(calculateRate() * 100).toFixed(2)}} %</h2>
+        <h2 class="values">{{getRate()}} %</h2>
         <h3>Ежемесячный платёж:</h3>
-        <h2 class="values">{{getPLT().toFixed(2)}} BYN</h2>
+        <h2 class="values">{{getPLT()}} BYN</h2>
         <!--
         <div>Выгода:</div>
         <div>{{getExtraPayment()}}</div>
