Added quick call

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,3 +47,9 @@
     <a href="tel:+375336892989">+375(33)689-29-89</a>
   </span>
 </div>
+
+<div class="requestCall">
+  <a mat-fab color="primary" (click)="openModal()" aria-label="Заказать звонок">
+    <mat-icon>phone</mat-icon>
+  </a>
+</div>
