--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,3 @@
-
 .header {
   height: 100%;
   width: 100%;
@@ -8,11 +7,6 @@
   align-items: center;
   color: #fff
 }
-
-
-
-
-
 
 .desktopNav {
   display: flex;
@@ -44,14 +38,6 @@ h1.example-app-name {
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
-
-
-
-
-
-
-
-
 
 .logo {
   height: 40px;
@@ -120,6 +106,25 @@ h1.example-app-name {
   margin-left: -1px;
 }
 
+.requestCall {
+  position: fixed;
+  bottom: 180px;
+  right: 60px;
+}
+
+.requestCall a {
+  -webkit-box-shadow: 3px 3px 48px 3px rgba(255,255,255,1);
+  -moz-box-shadow: 3px 3px 48px 3px rgba(255,255,255,1);
+  box-shadow: 3px 3px 48px 3px rgba(255,255,255,1);
+}
+
+@media screen and (max-width: 1210px) {
+  .logo span {
+    font-size: 1.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
 @media screen and (max-width: 824px) {
   .numberForConnection {
     margin-right: 5%;
@@ -130,12 +135,11 @@ h1.example-app-name {
   .logo {
     margin-left: 5%
   }
-
+  .logo span {
+    font-size: 1.2rem;
+  }
   .emptyDivForPositionLogo {
     width: 4px;
-  }
-  .logo span {
-    font-size: 1.5rem;
   }
   .numberForConnection {
     font-size: 1.5rem;
@@ -150,15 +154,11 @@ h1.example-app-name {
     justify-content: center;
     align-items: center;
     height: 100%;
-
   }
-}
-
-@media screen and (max-width: 440px) {
-  .yellowTreangle {
-    margin: 0 4px 0 0;
-    height: auto;
-    display: none;
+  .requestCall {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
   }
 }
 
@@ -166,8 +166,5 @@ h1.example-app-name {
   .logo span {
     font-size: 1rem;
   }
-  .numberForConnection {
-    font-size: 1.2rem;
-    margin-right: 6px;
-  }
+
 }
