--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,31 @@
 <div class="header">
-  <app-header>
-  </app-header>
+  <!-- <app-header >
+  </app-header> -->
 </div>
-<router-outlet></router-outlet>
+
+
+<div class=" example-container mobileNav" [class.example-is-mobile]="mobileQuery.matches">
+  <button mat-icon-button (click)="snav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 40 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                        [fixedInViewport]="mobileQuery.matches"
+                        fixedTopGap="40">
+      <mat-nav-list>
+        <h3 style="text-align: center;">AV-Finance</h3>
+        <a mat-list-item (click)="snav.toggle()" routerLink="">Главная</a>
+        <a mat-list-item *ngFor="let route of routes"
+                        (click)="snav.toggle()"
+                        [routerLink]="route.path">
+          {{route.title}}
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
